@@ -1,0 +1,68 @@
+<?php
+/**
+ * WeCodeArt Framework
+ *
+ * WARNING: This file is part of the core WeCodeArt Framework. DO NOT edit this file under any circumstances.
+ * Please do all modifications in the form of a child theme.
+ *
+ * @package		WeCodeArt Framework
+ * @subpackage  Gutenberg\Blocks
+ * @copyright   Copyright (c) 2021, WeCodeArt Framework
+ * @since		5.0.0
+ * @version		5.3.2
+ */
+
+namespace WeCodeArt\Gutenberg\Blocks\Site;
+
+defined( 'ABSPATH' ) || exit();
+
+use WeCodeArt\Singleton;
+use WeCodeArt\Gutenberg\Blocks\Dynamic;
+use function WeCodeArt\Functions\get_prop;
+
+/**
+ * Gutenberg Query Template Part block.
+ */
+class Part extends Dynamic {
+
+	use Singleton;
+
+    /**
+	 * Block namespace.
+	 *
+	 * @var string
+	 */
+	protected $namespace = 'core';
+
+	/**
+	 * Block name.
+	 *
+	 * @var string
+	 */
+	protected $block_name = 'template-part';
+
+	/**
+	 * Shortcircuit Register
+	 */
+	public function register() {
+		add_filter( 'block_type_metadata_settings', [ $this, 'filter' ], 10, 2 );
+	}
+
+	/**
+	 * Filter block
+	 *
+	 * @param	array 	$settings
+	 * @param	array 	$data
+	 */
+	public function filter( $settings, $data ) {
+        if ( $this->get_block_type() === $data['name'] ) {
+			$settings = wp_parse_args( [
+				'supports' => array_merge( isset( $settings['supports'] ) ? $settings['supports'] : [], [
+                    '__experimentalLayout' => true,
+                ] )
+			], $settings );
+		}
+		
+		return $settings;
+	}
+}
